Bug 451458 - Increase Max Number of Quick Open Sessions
Summary: Increase Max Number of Quick Open Sessions
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: sessions (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-03-13 16:15 UTC by Allen Winter
Modified: 2022-03-18 21:31 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Allen Winter 2022-03-13 16:15:07 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Have more than 10 Sessions
2. Click open the Sessions->Quick Open Session menu
3. 

OBSERVED RESULT
Notice that only 10 sessions are shown in the menu

EXPECTED RESULT
All my sessions have a menu selection

Version 21.08.3

ADDITIONAL INFORMATION
Perhaps the Sessions->Manage Session dialog could have a configuration for max number of sessions to show in the Quick Open menu
Comment 1 Christoph Cullmann 2022-03-13 20:34:51 UTC
Hi,

yeah, or should we perhaps show all of them?
I would assume that most people will anyways have below 100 sessions around and the menu should be able to cope with that.
Comment 2 Bug Janitor Service 2022-03-15 19:20:56 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kate/-/merge_requests/675
Comment 3 Christoph Cullmann 2022-03-15 19:21:34 UTC
Allen, could you try my merge request?

Thanks!

It provides a recent sessions menu that is just like the current one with the last 10 used ones and a second that provides access to all sessions.
Comment 4 Christoph Cullmann 2022-03-18 21:31:28 UTC
Git commit 4643c9f91c088c6acd15a9c5c3a45accc7a540b5 by Christoph Cullmann.
Committed on 18/03/2022 at 21:28.
Pushed by cullmann into branch 'master'.

provide menu with all sessions

have two menus for sessions:
  * one as is, last 10 recently used ones
  * second one with just all sessions

M  +1    -1    kate/autotests/sessions_action_test.cpp
M  +2    -1    kate/data/kateui.rc
M  +7    -3    kate/katemainwindow.cpp
M  +7    -3    kate/session/katesessionsaction.cpp
M  +2    -1    kate/session/katesessionsaction.h

https://invent.kde.org/utilities/kate/commit/4643c9f91c088c6acd15a9c5c3a45accc7a540b5