provide menu with all sessions

have two menus for sessions:
  * one as is, last 10 recently used ones
  * second one with just all sessions

BUG: 451458